[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/gui/PlayerUI.gd" type="Script" id=1]
[ext_resource path="res://scripts/gui/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://icons/unit_cursor.png" type="Texture" id=3]
[ext_resource path="res://scripts/gui/map_markers/UnitCursor.gd" type="Script" id=4]
[ext_resource path="res://scripts/gui/map_markers/TerrainCursor.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/gui/QuickHelp.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/gui/messages/MessagePanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/gui/context_container/ContextContainer.gd" type="Script" id=8]
[ext_resource path="res://scripts/gui/context_container/SpawnUnitTool.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/gui/context_container/DeleteUnitTool.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/gui/context_container/MoveUnit.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/gui/context_container/SelectFacing.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/gui/context_container/UnitActions.tscn" type="PackedScene" id=13]
[ext_resource path="res://scripts/gui/context_container/SelectUnit.tscn" type="PackedScene" id=14]
[ext_resource path="res://scripts/gui/context_container/DialogContext.tscn" type="PackedScene" id=15]
[ext_resource path="res://scripts/gui/UnitInfoPanel.tscn" type="PackedScene" id=16]
[ext_resource path="res://scripts/gui/DevToolbox.tscn" type="PackedScene" id=17]
[ext_resource path="res://scripts/gui/DebugLabel.gd" type="Script" id=18]

[sub_resource type="GDScript" id=1]

script/source = "extends WindowDialog

func _input(event):
	if event.is_action_pressed(\"show_quick_help\"):
		if visible:
			hide()
		else:
			popup_centered()

func _close_button_pressed():
	hide()
"

[node name="PlayerUI" type="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Mouse" ]

[node name="Camera" parent="." index="0" instance=ExtResource( 2 )]

[node name="UnitCursor" type="Sprite" parent="." index="1"]

modulate = Color( 1, 0.784314, 0.584314, 0.353608 )
z_index = 1
texture = ExtResource( 3 )
script = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Visibility", "Z Index" ]

[node name="TerrainCursor" parent="." index="2" instance=ExtResource( 5 )]

[node name="HUDLayer" type="CanvasLayer" parent="." index="3"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="QuickHelp" parent="HUDLayer" index="0" instance=ExtResource( 6 )]

visible = false
script = SubResource( 1 )

[node name="LowerLeftPanel" type="VBoxContainer" parent="HUDLayer" index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_top = -128.0
margin_right = 600.0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 2
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Mouse", "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="HUDLayer/LowerLeftPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 600.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Mouse" ]

[node name="MessagePanel" parent="HUDLayer/LowerLeftPanel/VBoxContainer" index="0" instance=ExtResource( 7 )]

margin_right = 450.0
margin_bottom = 44.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 0

[node name="ContextContainer" type="Container" parent="HUDLayer/LowerLeftPanel/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 600.0
margin_bottom = 88.0
grow_vertical = 0
rect_min_size = Vector2( 600, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 8 )
_sections_unfolded = [ "Mouse" ]

[node name="SpawnUnit" parent="HUDLayer/LowerLeftPanel/VBoxContainer/ContextContainer" index="0" instance=ExtResource( 9 )]

anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="DeleteUnit" parent="HUDLayer/LowerLeftPanel/VBoxContainer/ContextContainer" index="1" instance=ExtResource( 10 )]

anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="MoveUnit" parent="HUDLayer/LowerLeftPanel/VBoxContainer/ContextContainer" index="2" instance=ExtResource( 11 )]

anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="SelectFacing" parent="HUDLayer/LowerLeftPanel/VBoxContainer/ContextContainer" index="3" instance=ExtResource( 12 )]

anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="UnitActions" parent="HUDLayer/LowerLeftPanel/VBoxContainer/ContextContainer" index="4" instance=ExtResource( 13 )]

anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="SelectUnit" parent="HUDLayer/LowerLeftPanel/VBoxContainer/ContextContainer" index="5" instance=ExtResource( 14 )]

anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
grow_vertical = 0

[node name="Dialog" parent="HUDLayer/LowerLeftPanel/VBoxContainer/ContextContainer" index="6" instance=ExtResource( 15 )]

anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="UnitInfoPanel" parent="HUDLayer" index="2" instance=ExtResource( 16 )]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -58.0
margin_right = 0.0
margin_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "Size Flags", "custom_styles" ]

[node name="DevToolbox" parent="HUDLayer" index="3" instance=ExtResource( 17 )]

[node name="DebugLabel" type="Label" parent="HUDLayer" index="4"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -40.0
margin_bottom = 14.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "XXXX"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 18 )
_sections_unfolded = [ "Grow Direction" ]


